Try to fix scrolling header nav on IOS v6

--- a/assets/css/lipinskie-raki/main.css
+++ b/assets/css/lipinskie-raki/main.css
@@ -679,7 +679,8 @@ footer{
     left: 0;
     top: 78px;
     overflow-x: hidden; /* Disable horizontal scroll */
-    transition: 0.5s; /* 0.5 second transition effect to slide in or slide down the overlay (height or width, depending on reveal) */
+    overflow-y: scroll;
+    /*transition: 0.5s; !* 0.5 second transition effect to slide in or slide down the overlay (height or width, depending on reveal) *!*/
     background: rgba(13, 11, 11, 0.9);
 }
 #user-mobile{
